--- a/my-code-generator-basic/pom.xml
+++ b/my-code-generator-basic/pom.xml
@@ -30,6 +30,12 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- 模板引擎 -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.32</version>
+        </dependency>
     </dependencies>
 
 </project>
