--- a/my-code-generator-basic/pom.xml
+++ b/my-code-generator-basic/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.32</version>
         </dependency>
+        <!-- 命令行 -->
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.7.5</version>
+        </dependency>
     </dependencies>
 
 </project>
